hero module on mobile bugfix

--- a/components/hero/hero.module.scss
+++ b/components/hero/hero.module.scss
@@ -1,4 +1,6 @@
 @import '/styles/theme';
+@import '/styles/include';
+
 @import url('https://fonts.googleapis.com/css2?family=Italianno&display=swap');
 
 .masthead {
@@ -14,11 +16,21 @@
   // overflow: hidden;
   background-size: cover !important;
   background: rgb(131,58,180);
-  background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 54%, rgba(252,176,69,1) 100%);
+  background: linear-gradient(90deg, #1fe4f5 0%, #3fbafe 54%, #60efbc 100%);
+
+  @include media("<large") {
+
+    flex-wrap: unset;
+    height: unset;
+  }
 
   .textAndBtn {
     flex: 1 1 20em;
     width: 60%;
+
+    @include media("<large") {
+      width: 100%;
+    }
 
     h2 {
       font-family: 'Italianno', cursive;
@@ -59,6 +71,14 @@
       height: 64%;
       position: relative;
       top: 147px;
+      
+      @include media("<large") {
+        top: 44px;
+      }
+      @include media("<medium") {
+        left: -265px;
+      }
+    
     }
   }
 
